--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <footer class="footer mt-auto py-3">
       <div class="container">
         <p class="text-center" style="color: white;"><small>Desenvolvido por Marcos Heiner - 2020</small> </p>
-        <p class="text-center" style="color: white;"><small>GitHub <i class="fab fa-github"></i></small></p>
+        <a href="https://github.com/marcosheiner/projetoAv1" class="link-git" target="_blank"><p class="text-center"><small>GitHub <i class="fab fa-github"></i></small></p></a>
       </div>
     </footer>
    
