--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <div class="container">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item active shadow">
                         <a class="nav-link" href="index.html"><i class="fal fa-home"></i></a>
                     </li>
                     <li class="nav-item dropdown">
@@ -33,7 +33,7 @@
                             MINHAS QUESTÕES
                         </a>
                         <div class="dropdown-menu shadow" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">QUESTÃO 1</a>
+                            <a class="dropdown-item" href="questao1.html">QUESTÃO 1</a>
                             <a class="dropdown-item" href="#">QUESTÃO 2</a>
                             <a class="dropdown-item" href="#">QUESTÃO 3</a>
                         </div>
