--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Sobre Mim</h5>
-                  <p class="card-text">Olá, meu nome é Marcos Heiner,<br> atualmente com 20 anos e cursando<br> Análise de Sistemas na Unileão.</p>
+                  <p class="card-text">Olá, meu nome é Marcos Heiner,<br> atualmente com 20 anos e cursando<br> Análise de Sistemas na Unileão,<br> gosto de programar em javascipt e php,<br> tenho muito para aprender, mas mesmo assim<br> ainda me divirto nessas linguagens! :)</p>
                   <a href="https://wa.me/5588988457257" class="btn" target="_blank" data-toggle="tooltip" data-placement="bottom" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                   <a href="https://www.instagram.com/marcosheiner_/" class="btn" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fab fa-instagram"></i></a>
                   <a href="https://www.facebook.com/marcos.heiner.3" class="btn" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fab fa-facebook"></i></a>
