--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 
     <header class="shadow">
-        <h5 align="center" class="texto-barra">PROJETO WEB</h5>
+        <h5 align="center" class="texto-barra" id="nomeHome">PROJETO WEB</h5>
+        
     </header>
 
     <!--menu-->
@@ -36,6 +37,7 @@
                             <a class="dropdown-item" href="questao1.html">QUESTÃO 1</a>
                             <a class="dropdown-item" href="#">QUESTÃO 2</a>
                             <a class="dropdown-item" href="#">QUESTÃO 3</a>
+                            <a class="dropdown-item" href="#">QUESTÃO 4</a>
                         </div>
                     </li>
                 </ul>
@@ -44,7 +46,7 @@
     </nav>
 
     
-    <div class="container" style="">
+    <div class="container">
         <hr>
         <div class="row">
 
@@ -55,7 +57,7 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Sobre Mim</h5>
-                  <p class="card-text">Olá, meu nome é Marcos Heiner,<br> atualmente com 20 anos e cursando<br> Análise de Sistemas na Unileão,<br> gosto de programar em javascipt e php,<br> tenho muito para aprender, mas mesmo assim<br> ainda me divirto nessas linguagens! :)</p>
+                  <p class="card-text">Me chamo Marcos Heiner, tenho 20 anos e <br>atualmente cursando Análise de Sistemas, gosto muito<br> da programação e sempre busco entender um pouco mais<br> sobre esse mundo gigantesco que é a programação.</p>
                   <a href="https://wa.me/5588988457257" class="btn" target="_blank" data-toggle="tooltip" data-placement="bottom" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
                   <a href="https://www.instagram.com/marcosheiner_/" class="btn" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fab fa-instagram"></i></a>
                   <a href="https://www.facebook.com/marcos.heiner.3" class="btn" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fab fa-facebook"></i></a>
