--- a/questao1.html
+++ b/questao1.html
@@ -33,9 +33,9 @@
                             MINHAS QUESTÕES
                         </a>
                         <div class="dropdown-menu shadow" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">QUESTÃO 1</a>
-                            <a class="dropdown-item" href="#">QUESTÃO 2</a>
-                            <a class="dropdown-item" href="#">QUESTÃO 3</a>
+                            <a class="dropdown-item" href="questao1.html">QUESTÃO 1</a>
+                            <a class="dropdown-item" href="questao2.html">QUESTÃO 2</a>
+                            <a class="dropdown-item" href="questao3.html">QUESTÃO 3</a>
                             <a class="dropdown-item" href="#">QUESTÃO 4</a>
                         </div>
                     </li>
