--- a/questao1.html
+++ b/questao1.html
@@ -36,7 +36,7 @@
                             <a class="dropdown-item" href="questao1.html">QUESTÃO 1</a>
                             <a class="dropdown-item" href="questao2.html">QUESTÃO 2</a>
                             <a class="dropdown-item" href="questao3.html">QUESTÃO 3</a>
-                            <a class="dropdown-item" href="#">QUESTÃO 4</a>
+                            <a class="dropdown-item" href="questao4.html">QUESTÃO 4</a>
                         </div>
                     </li>
                 </ul>
