--- a/questao3.html
+++ b/questao3.html
@@ -37,7 +37,7 @@
                             <a class="dropdown-item" href="questao1.html">QUESTÃO 1</a>
                             <a class="dropdown-item" href="#">QUESTÃO 2</a>
                             <a class="dropdown-item" href="questao3.html">QUESTÃO 3</a>
-                            <a class="dropdown-item" href="#">QUESTÃO 4</a>
+                            <a class="dropdown-item" href="questao4.html">QUESTÃO 4</a>
                         </div>
                     </li>
                 </ul>
