--- a/questao1.html
+++ b/questao1.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="index.html"><i class="fal fa-home"></i></a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle btn-questoes shadow href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle btn-questoes shadow" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             MINHAS QUESTÕES
                         </a>
                         <div class="dropdown-menu shadow" aria-labelledby="navbarDropdownMenuLink">
