--- a/questao4.html
+++ b/questao4.html
@@ -106,7 +106,8 @@
     <div class="container">
 
       <div class="alert alert-danger" role="alert">
-        Atenção! Não usar "," nos campos de <b>peso</b> e <b>altura</b>!
+        Atenção! Não usar "," nos campos de <b>peso</b> e <b>altura</b>!<br>
+        Usar apenas . (ponto). Ex: 00.00!
       </div>
 
       <form id="form_imc" name="form_imc" method="POST" action="">
